Successfully added weather API to project and printed the object to console

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
   <body>
     <h1>Weather Dashboard</h1>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <form>
+                    <input id="search-bar">search bar</input>
+                    <button id="search-button">Submit</button>
+                </form>
+            </div>
+            <div class="col-md-8">
+                <card id="search-results">Search Results</card>
+            </div>
+        </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
