--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-md-4">
                 <form>
-                    <input id="search-bar"></input>
+                    <input id="search-bar" type="text"></input>
                     <button id="search-button">Search</button>
                 </form>
             </div>
