--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <button id="search-button">Search</button>
                 </form>
             </div>
-            <div class="col-md-8">
-                <card id="search-results"></card>
+            <div class="col-md-8" id="search-results">
+               
             </div>
         </div>
     </div>
