--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <input id="search-bar" type="text"></input>
                     <button id="search-button">Search</button>
                 </form>
+                <div class="row" id="previous-search">
+              
+                </div>
             </div>
             <div class="col-md-8" id="search-results">
                
