Previous searches buttons now appear in rows on page, with the most recent search appearing on top. Buttons are not functional

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                     <input id="search-bar" type="text"></input>
                     <button id="search-button">Search</button>
                 </form>
-                <div class="row" id="previous-search">
-              
+                <div class="row">
+                    <div class="col-md-12" id="previous-search">
+
+                    </div>
                 </div>
             </div>
             <div class="col-md-8" id="search-results">
