--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
                 </form>
                 <div class="row">
                     <div class="col-md-12" id="previous-search">
-                      
+
                     </div>
                 </div>
             </div>
-            <div class="col-md-8" id="search-results">
-               
+            <div class="col-md-8">
+              <div class="row">
+                <div class="col-md-12" id="search-results"></div>
+              </div>
+              <div class="row">
+                <div class="col-md-12" id="search-results-future"></div>
+              </div>
             </div>
         </div>
     </div>
