Added search instructions to HTML

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="row">
             <div class="col-md-4">
                 <form>
+                    <p> Enter any US City! </p>
                     <input id="search-bar" type="text"></input>
                     <button id="search-button">Search</button>
                 </form>
