--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,400&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    
     <!-- Style CSS -->
     <link rel="stylesheet" href="Assets/style.css">
+
+    
 
     <title>Weather Dashboard</title>
   </head>
   <body>
-    <h1>Weather Dashboard</h1>
+    <h1 class="header">Weather Dashboard</h1>
 
     <div class="container">
         <div class="row">
